- Delected directory "Conf" and log4j file - Delected "logs" directory. - Introduced JDSLog4jInitServlet. This servlet will initialise the log4j logger. Log file is present at ${catalina.home}/logs/JDS/jds.log. catalina.home = directory where Tomcat is installed.
- To re-load the log4j properties file at run-time, type in the following in the browser
http://localhost:8080/JDS/JDSLog4JInitServlet?reloadPropertiesFile
- Different logging levels available are: DEBUG, INFO, WARN, ERROR, FATAL
- To change the log level at run-time, type in the following in the browser
http://localhost:8080/JDS/JDSLog4JInitServlet?logLevel=WARN
This will change the default level from DEBUG to WARN

- Added debug information in mail.java.

- Introduced msgsend.java: This utility can be used to send emails.
This reads information from the "jds_email.properties" file.
- A sample usage can be found in "inward.java". Any exception that is generated is now mailed to the email ID "jds.adm.all@gmail.com".

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -6,6 +6,9 @@ libs.javaee-endorsed-api-6.0.classpath=\
     ${base}/javaee-endorsed-api-6.0/webservices-api-osgi.jar
 libs.javaee-endorsed-api-6.0.javadoc=\
     ${base}/javaee-endorsed-api-6.0/javaee6-doc-api.zip
+libs.JavaMail.classpath=\
+    ${base}/JavaMail/mail.jar;\
+    ${base}/JavaMail/smtp.jar
 libs.jsp-compilation-syscp.classpath=\
     ${base}/jsp-compilation-syscp/ant.jar;\
     ${base}/jsp-compilation-syscp/servlet3.0-jsp2.2-api.jar;\
