--- a/web/WEB-INF/classes/log4j.properties
+++ b/web/WEB-INF/classes/log4j.properties
@@ -1,7 +1,13 @@
+# This sets the global logging level and specifies the appenders
 log4j.rootLogger=DEBUG, JDS
+
+# settings for the console appender
 log4j.appender.JDS=org.apache.log4j.RollingFileAppender
-log4j.appender.JDS.File=${catalina.base}/logs/JDS/jds.log
+log4j.appender.JDS.File=${catalina.home}/logs/JDS/jds.log
 log4j.appender.JDS.MaxFileSize=10MB
 log4j.appender.JDS.MaxBackupIndex=10
 log4j.appender.JDS.layout=org.apache.log4j.PatternLayout
-log4j.appender.JDS.layout.ConversionPattern=%d %-5p %c - %m%n
+log4j.appender.JDS.layout.ConversionPattern=[%d %-5p %c] - %m%n
+
+log4j.logger.org.apache=ERROR
+log4j.logger.org.apache.catalina.startup=INFO
