--- a/trunk/nbproject/project.properties
+++ b/trunk/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
-annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 auxiliary.org-netbeans-modules-html-editor-lib.default-html-public-id=HTML5
@@ -69,11 +68,11 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=-g
 javac.debug=true
-javac.deprecation=false
+javac.deprecation=true
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -93,7 +92,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=JDK_1.7
+platform.active=default_platform
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
