--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -13,14 +13,8 @@
 #--------------------------------------------------------------------------
 # Master Data
 #--------------------------------------------------------------------------
-city = select city from cities
 
-country = select country from countries
-
-state =  select state from states
-
-district = select district from districts
-
+! Generic ------------------------------------------------------
 purpose = select purpose from inward_purpose order by id
 
 payment_mode = select payment_mode from payment_mode order by id
@@ -29,17 +23,87 @@ currency = select currency from currency order by id
 
 return_reason = select return_reason from inward_return_reasons order by id
 
-agent = select agent from agents
+! End Generic ------------------------------------------------------
 
-journals = select journalName,journalCode,price from journals
+
+! City ------------------------------------------------------
+city = select city from cities
+
+search_city = select id, city from cities where city like ?
 
 city_insert = insert into cities(city) values(?)
 
+get_city_by_name = select id, city from cities where city = ?
+
+get_city_by_id = select id, city from cities where id = ?
+
+update_city = update cities set city = ? where id = ?
+
+! End City----------------------------------------------------
+
+
+!District ------------------------------------------------------
+search_district = select id, district from districts where district like ?
+
+district = select district from districts
+
 district_insert = insert into districts(district) values(?)
+
+get_district_by_name = select id, district from districts where district = ?
+
+get_district_by_id = select id, district from districts where id = ?
+
+update_district = update districts set district = ? where id = ?
+! End District----------------------------------------------------
+
+
+!State ------------------------------------------------------
+search_state = select id, state from states where state like ?
+
+state =  select state from states
 
 state_insert = insert into states(state) values(?)
 
+get_state_by_name = select id, state from states where state = ?
+
+get_state_by_id = select id, state from states where id = ?
+
+update_state = update states set state = ? where id = ?
+
+! End State----------------------------------------------------
+
+
+
+! Country------------------------------------------------------
+country = select country from countries
+
 country_insert = insert into countries(country) values(?)
+
+get_country_by_name = select id, country from countries where country = ?
+
+get_country_by_id = select id, country from countries where id = ?
+
+update_country = update countries set country = ? where id = ?
+
+search_country = select id, country from countries where country like ?
+! End Country----------------------------------------------------
+
+
+! Journal------------------------------------------------------
+journals = select journalName,journalCode,price from journals
+
+journal_insert = insert into journals(journalCode,journalName,issnNo,pages,startYear,issues) values(?,?,?,?,?,?)
+
+update_journal = update journals set journalCode = ?, journalName = ?, issnNo = ?, pages = ?, startYear = ?, issues = ? where id = ?
+                                    
+get_journal_by_name = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals where journalCode = ? and journalName = ? and issnNo = ? and pages = ? and startYear = ? and issues = ?
+
+get_journal_by_id = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals where id = ?
+
+! End Journal----------------------------------------------------
+
+
+! Subscriber Type------------------------------------------------------
 
 sub_type = select distinct subtype from subscriber_type
 
@@ -51,45 +115,21 @@ subtype_desc_asf = select distinct subtypedesc from subscriber_type where subtyp
 
 subtype_code = select subtypecode from subscriber_type where subtypedesc = ?
 
-get_country_by_name = select countryId, country from countries where country = ?
-
-get_country_by_id = select countryId, country from countries where countryId = ?
-
-update_country = update countries set country = ? where countryId = ?
-
-get_city_by_name = select cityId, city from cities where city = ?
-
-get_city_by_id = select cityId, city from cities where cityId = ?
-
-update_city = update cities set city = ? where cityId = ?
-
-get_state_by_name = select stateId, state from states where state = ?
-
-get_state_by_id = select stateId, state from states where stateId = ?
-
-update_state = update states set state = ? where stateId = ?
-
-get_district_by_name = select districtId, district from districts where district = ?
-
-get_district_by_id = select districtId, district from districts where districtId = ?
-
-update_district = update districts set district = ? where districtId = ?
-
-journal_insert = insert into journals(journalCode,journalName,issnNo,pages,startYear,issues) values(?,?,?,?,?,?)
-
-update_journal = update journals set journalCode = ?, journalName = ?, issnNo = ?, pages = ?, startYear = ?, issues = ? where journalId = ?
-
-get_journal_by_name = select journalId, journalCode, journalName, issnNo, pages, startYear, issues from journals where journalCode = ? and journalName = ? and issnNo = ? and pages = ? and startYear = ? and issues = ?
-
-get_journal_by_id = select journalId, journalCode, journalName, issnNo, pages, startYear, issues from journals where journalId = ?
-
 subType_insert = insert into subscriberTypes(subTypeCode,subTypeName,freePaid,nationality,institutional,freeCopies,discount) values(?,?,?,?,?,?,?)
 
 update_subType = update subscriberTypes set subTypeCode = ?, subTypeName = ?, freePaid = ?, nationality = ?, institutional = ?, freeCopies = ?, discount = ? where subTypeId = ?
-
+                                    
 get_subType_by_name = select subTypeId, subTypeCode, subTypeName, freePaid, nationality, institutional, freeCopies, discount from subscriberTypes where subTypeCode = ? and subTypeName = ? and freePaid = ? and nationality = ? and institutional = ? and freeCopies = ? discount = ?
 
 get_subType_by_id = select subTypeId, subTypeCode, subTypeName, freePaid, nationality, institutional, freeCopies, discount from subscriberTypes where subTypeId = ?
+
+
+! End Subscriber Type----------------------------------------------------
+
+
+! Agent------------------------------------------------------
+
+agent = select agent from agents
 
 agent_insert = insert into agents(agentName,regDate,emailId,address,cityId,districtId,stateId,CountryId,pinCode,discount)\
                 values(?,?,?,?,(select cityId from cities where city = ?),(select districtId from districts where district = ?),\
@@ -98,7 +138,7 @@ agent_insert = insert into agents(agentName,regDate,emailId,address,cityId,distr
 update_agent = update agents set agentName = ?, regDate = ?, address = ?, emailId = ?, cityId = (select cityId from cities where city = ?), \
                 districtId = (select districtId from districts where district = ?), stateId = (select stateId from states where state = ?), \
                 CountryId = (select countryId from countries where country = ?), pinCode = ?, discount = ? where agentId = ?
-
+                                    
 get_agent_by_name = select agentId, agentName, regDate, emailId, address, cityId, districtId, stateId, CountryId, pinCode, discount from agents where agentName = ? and regDate = ? \
                     and emailId = ? and address = ? and cityId = (select cityId from cities where city = ?) and \
                      districtId = (select districtId from districts where district = ?) and  stateId = (select stateId from states where state = ?) and \
@@ -106,14 +146,13 @@ get_agent_by_name = select agentId, agentName, regDate, emailId, address, cityId
 
 get_agent_by_id = select agentId, agentName, regDate, emailId, address, cityId, districtId, stateId, CountryId, pinCode, discount from agents where agentId = ?
 
-search_city = select * from cities where city like ?
 
-search_country = select countryId, country from countries
+! End Agent----------------------------------------------------
 
-search_district = select districtId, district from districts
 
-search_state = select stateId, state from states
-
+#--------------------------------------------------------------------------
+# End Master Data
+#--------------------------------------------------------------------------
 
 #--------------------------------------------------------------------------
 # Inward
@@ -290,9 +329,14 @@ search_subscrption =    select  t1.id \
 insert_subscription = insert into subscription(subscriberID,inwardID,subscriptionTotal,remarks) \
                       values ((select id from subscriber where subscriberNumber=?),(select id from inward where inwardNumber=?),?,?)
 
+
+
 insert_subscription_detail = insert into subscriptiondetails (subscriptionID,journalID,copies,startYear,endYear) values (?, (select id from journals where journalCode=?), ?, ?, ?)
+
 
 delete_subscription = update subscription set active = false where id=?
 
+
 get_subscription_details =  select t1.id, t2.journalCode, t2.journalName,t1.copies,t1.startYear,t1.endYear from subscriptiondetails t1, journals t2 where t1.journalID = t2.id \
                             and t1.subscriptionID = ?
+
