--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -100,6 +100,8 @@ get_journal_by_name = select id, journalCode, journalName, issnNo, pages, startY
 
 get_journal_by_id = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals where id = ?
 
+search_journal = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals where journalCode like ? or journalName like ?
+
 ! End Journal----------------------------------------------------
 
 
@@ -115,13 +117,15 @@ subtype_desc_asf = select distinct subtypedesc from subscriber_type where subtyp
 
 subtype_code = select subtypecode from subscriber_type where subtypedesc = ?
 
-subType_insert = insert into subscriberTypes(subTypeCode,subTypeName,freePaid,nationality,institutional,freeCopies,discount) values(?,?,?,?,?,?,?)
+subType_insert = insert into subscriber_type(subtypecode,subtypedesc,subtype,nationality,institutional,freejrnl,discount) values(?,?,?,?,?,?,?)
 
-update_subType = update subscriberTypes set subTypeCode = ?, subTypeName = ?, freePaid = ?, nationality = ?, institutional = ?, freeCopies = ?, discount = ? where subTypeId = ?
+update_subType = update subscriber_type set subtypecode = ?, subtypedesc = ?, subtype = ?, nationality = ?, institutional = ?, freejrnl = ?, discount = ? where id = ?
 
-get_subType_by_name = select subTypeId, subTypeCode, subTypeName, freePaid, nationality, institutional, freeCopies, discount from subscriberTypes where subTypeCode = ? and subTypeName = ? and freePaid = ? and nationality = ? and institutional = ? and freeCopies = ? discount = ?
+get_subType_by_name = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type where subtypecode = ? and subtypedesc = ? and subtype = ? and nationality = ? and institutional = ? and freejrnl = ? discount = ?
 
-get_subType_by_id = select subTypeId, subTypeCode, subTypeName, freePaid, nationality, institutional, freeCopies, discount from subscriberTypes where subTypeId = ?
+get_subType_by_id = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type where id = ?
+
+search_subType = select id, subtypecode, subtypedesc, subtype, nationality, institutional from subscriber_type where subtypecode like ? or subtype like ?
 
 
 ! End Subscriber Type----------------------------------------------------
