--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -66,7 +66,7 @@
     </servlet>
     <servlet>
         <servlet-name>agent</servlet-name>
-        <servlet-class>IAS.Controller.masterdata.agent1</servlet-class>
+        <servlet-class>IAS.Controller.masterdata.agent</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>subType</servlet-name>
@@ -164,10 +164,6 @@
         <url-pattern>/journal</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>agent</servlet-name>
-        <url-pattern>/agent1</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>home</servlet-name>
         <url-pattern>/home</url-pattern>
     </servlet-mapping>
@@ -226,6 +222,10 @@
     <servlet-mapping>
         <servlet-name>JDSLog4JInitServlet</servlet-name>
         <url-pattern>/JDSLog4JInitServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>agent</servlet-name>
+        <url-pattern>/agent</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>60</session-timeout>
