--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -135,20 +135,48 @@ search_subType = select id, subtypecode, subtypedesc, subtype, nationality, inst
 
 agent = select agent from agents
 
-agent_insert = insert into agents(agentName,regDate,emailId,address,cityId,districtId,stateId,CountryId,pinCode,discount)\
-                values(?,?,?,?,(select cityId from cities where city = ?),(select districtId from districts where district = ?),\
-                (select stateId from states where state = ?),(select countryId from countries where country = ?),?, ?)
+agent_insert = insert into agents(agentName,regDate,emailId,address,cityId,districtId,stateId,countryId,pinCode,discount)\
+                values(?,?,?,?,(select id from cities where city = ?),(select id from districts where district = ?),\
+                (select id from states where state = ?),(select id from countries where country = ?),?, ?)
 
 update_agent = update agents set agentName = ?, regDate = ?, address = ?, emailId = ?, cityId = (select cityId from cities where city = ?), \
-                districtId = (select districtId from districts where district = ?), stateId = (select stateId from states where state = ?), \
-                CountryId = (select countryId from countries where country = ?), pinCode = ?, discount = ? where agentId = ?
+                districtId = (select id from districts where district = ?), stateId = (select id from states where state = ?), \
+                countryId = (select id from countries where country = ?), pinCode = ?, discount = ? where id = ?
 
 get_agent_by_name = select agentId, agentName, regDate, emailId, address, cityId, districtId, stateId, CountryId, pinCode, discount from agents where agentName = ? and regDate = ? \
                     and emailId = ? and address = ? and cityId = (select cityId from cities where city = ?) and \
-                     districtId = (select districtId from districts where district = ?) and  stateId = (select stateId from states where state = ?) and \
+                    districtId = (select districtId from districts where district = ?) and  stateId = (select stateId from states where state = ?) and \
                     CountryId = (select countryId from countries where country = ?) and pinCode = ? and discount = ?
 
-get_agent_by_id = select agentId, agentName, regDate, emailId, address, cityId, districtId, stateId, CountryId, pinCode, discount from agents where agentId = ?
+!get_agent_by_id = select id, agentName, regDate, emailId, address, cityId, districtId, stateId, CountryId, pinCode, discount from agents where agentId = ?
+
+get_agent_by_id = select t1.id\
+                    ,t1.agentName \
+                    ,t1.regDate \
+                    ,t1.emailId \
+                    ,t1.address \
+                    ,t2.city \
+                    ,t3.district \
+                    ,t4.state \
+                    ,t5.country \
+                    ,t1.pinCode \
+                    ,t1.discount \
+                    from agents t1 \
+                    left join cities t2 on t1.cityId = t2.id \
+                    left join districts t3 on t1.districtId = t3.id \
+                    left join states t4 on t1.stateId = t4.id \
+                    left join countries t5 on t1.countryId = t5.id \
+                    where t1.id = ?
+
+search_agent = select t1.id\
+                    ,t1.agentName \
+                    ,t1.regDate \
+                    ,t1.emailId \
+                    ,t1.address \
+                    ,t2.city \
+                    from agents t1 \
+                    left join cities t2 on t1.cityId = t2.id
+                    where t1.id = ?
 
 
 ! End Agent----------------------------------------------------
