Completed agent (Create agent, view agent, edit agent, display agent)

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -139,14 +139,20 @@ agent_insert = insert into agents(agentName,regDate,emailId,address,cityId,distr
                 values(?,?,?,?,(select id from cities where city = ?),(select id from districts where district = ?),\
                 (select id from states where state = ?),(select id from countries where country = ?),?, ?)
 
-update_agent = update agents set agentName = ?, regDate = ?, address = ?, emailId = ?, cityId = (select cityId from cities where city = ?), \
-                districtId = (select id from districts where district = ?), stateId = (select id from states where state = ?), \
-                countryId = (select id from countries where country = ?), pinCode = ?, discount = ? where id = ?
+update_agent = update agents set agentName = ?, regDate = ?, address = ?, emailId = ?, \
+                cityId = (select id from cities where city = ?), \
+                districtId = (select id from districts where district = ?), \
+                stateId = (select id from states where state = ?), \
+                countryId = (select id from countries where country = ?), \
+                pinCode = ?, discount = ? where id = ?
 
-get_agent_by_name = select agentId, agentName, regDate, emailId, address, cityId, districtId, stateId, CountryId, pinCode, discount from agents where agentName = ? and regDate = ? \
-                    and emailId = ? and address = ? and cityId = (select cityId from cities where city = ?) and \
-                    districtId = (select districtId from districts where district = ?) and  stateId = (select stateId from states where state = ?) and \
-                    CountryId = (select countryId from countries where country = ?) and pinCode = ? and discount = ?
+get_agent_by_name = select agentId, agentName, regDate, emailId, address, cityId, districtId, stateId, CountryId, pinCode, discount from agents \
+                    where agentName = ? and regDate = ? and emailId = ? and address = ? and \
+                    cityId = (select id from cities where city = ?) and \
+                    districtId = (select id from districts where district = ?) and  \
+                    stateId = (select id from states where state = ?) and \
+                    countryId = (select id from countries where country = ?) and \
+                    pinCode = ? and discount = ?
 
 !get_agent_by_id = select id, agentName, regDate, emailId, address, cityId, districtId, stateId, CountryId, pinCode, discount from agents where agentId = ?
 
@@ -168,16 +174,9 @@ get_agent_by_id = select t1.id\
                     left join countries t5 on t1.countryId = t5.id \
                     where t1.id = ?
 
-search_agent = select t1.id\
-                    ,t1.agentName \
-                    ,t1.regDate \
-                    ,t1.emailId \
-                    ,t1.address \
-                    ,t2.city \
-                    from agents t1 \
-                    left join cities t2 on t1.cityId = t2.id
-                    where t1.id = ?
-
+search_agent = select t1.id ,t1.agentName ,t1.regDate ,t1.emailId ,t1.address ,t2.city from agents t1 \
+left join cities t2 on t1.cityId = t2.id \
+where t2.city like ? and  t1.agentName like ?
 
 ! End Agent----------------------------------------------------
 
