--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -180,6 +180,10 @@ where t2.city like ? and  t1.agentName like ?
 
 ! End Agent----------------------------------------------------
 
+!Print Order -----------------------------------------------------
+get_year = select distinct(year) from print_order group by year
+
+!End Print Order
 
 #--------------------------------------------------------------------------
 # End Master Data
