Print Order - JSP - add, Edit, Display, search, and print order - partly done print order Controller - partly done print order model - partly done

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -180,6 +180,10 @@ where t2.city like ? and  t1.agentName like ?
 
 ! End Agent----------------------------------------------------
 
+!Print Order -----------------------------------------------------
+get_year = select distinct(year) from print_order group by year
+
+!End Print Order
 
 #--------------------------------------------------------------------------
 # End Master Data
