Journal Price group : Partly done Journal Subject Group : partly Done Report - List Sub type: Partly Done

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -183,7 +183,20 @@ where t2.city like ? and  t1.agentName like ?
 !Print Order -----------------------------------------------------
 get_year = select distinct(year) from print_order group by year
 
-!End Print Order
+!End Print Order -------------------------------------------------------
+
+! Price Group----------------------------------------------------
+
+search_priceGroup = select id, priceGroupName from price_group
+
+get_priceGroup_by_id = select id, priceGroupName from price_group where id = ?
+!End Price Group------------------------------------------
+
+! Subject Group----------------------------------------------------
+
+search_subGroup = select id, subGroupName from subject_group
+
+!End Price Group------------------------------------------
 
 #--------------------------------------------------------------------------
 # End Master Data
@@ -375,3 +388,23 @@ delete_subscription = update subscription set active = false where id=?
 get_subscription_details =  select t1.id, t2.journalCode, t2.journalName,t1.copies,t1.startYear,t1.endYear from subscriptiondetails t1, journals t2 where t1.journalID = t2.id \
                             and t1.subscriptionID = ?
 
+
+
+#--------------------------------------------------------------------------
+# Reports
+#--------------------------------------------------------------------------
+
+!List Subscriber Type ---------------------------------------------
+
+Search_subtype_all = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type
+
+Search_subtype_prm = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type where subtype = ? and  nationality = ? and institutional = ?
+
+Search_subtype_FP = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type where subtype = ?
+
+Search_subtype_prm = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type where subtype = ? and  nationality = ? and institutional = ?
+
+!End List Subscriber Type ---------------------------------------------
+#--------------------------------------------------------------------------
+# End Reports
+#--------------------------------------------------------------------------
