Acknowledgement and inward fixes for demo

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -133,7 +133,7 @@ search_subType = select id, subtypecode, subtypedesc, subtype, nationality, inst
 
 ! Agent------------------------------------------------------
 
-agent = select agent from agents
+agent = select agentName from agents
 
 agent_insert = insert into agents(agentName,regDate,emailId,address,cityId,districtId,stateId,countryId,pinCode,discount)\
                 values(?,?,?,?,(select id from cities where city = ?),(select id from districts where district = ?),\
@@ -278,6 +278,12 @@ search_inward = select inwardNumber, t4.subscriberNumber as subscriberId, t1.fro
                 left join subscriber t4 on t1.subscriberId = t4.id \
                 where inwardNumber is not NULL
 
+search_inward_count = select count(*) from inward t1 \
+                left join cities t2 on t1.city = t2.id \
+                left join inward_purpose t3 on t1.inwardPurpose = t3.id \
+                left join subscriber t4 on t1.subscriberId = t4.id \
+                where inwardNumber is not NULL
+
 pending_inwards = select inwardNumber, t4.subscriberNumber as subscriberId, t1.from, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
                 t1.inwardPurpose as inwardPurposeID from inward t1 \
                 left join cities t2 on t1.city = t2.id \
@@ -293,14 +299,14 @@ update_cheque_return =  update inward set \
 #--------------------------------------------------------------------------
 
 subscriber_insert = insert into subscriber(subscriberNumber, subscriberCreationDate, subscriberName, subscriberAddress, city, district, state, country, pincode, subtype, \
-                    department, institution, email, agent) \
+                    department, institution, email, agent, deactive) \
                      values (?,?,?,?, \
                     (select id from cities where city=?), \
                     (select id from districts where district=?), \
                     (select id from states where state=?), \
                     (select id from countries where country=?),?, \
                     (select id from subscriber_type where subtype=? and subtypedesc=?),?,?,?, \
-                    (select id from agents where agent = ?))
+                    (select id from agents where agentName = ?),?)
 
 get_last_subscriber = SELECT subscriberNumber,subscriberCreationDate FROM subscriber ORDER BY id DESC LIMIT 1
 
@@ -319,7 +325,7 @@ get_subscriber_by_number = select t1.subscriberNumber\
                       ,t1.department \
                       ,t1.institution \
                       ,t1.email \
-                      ,t7.agent \
+                      ,t7.agentName \
                       ,t1.deactive \
                       ,DATE_FORMAT(t1.deactivationDate,'%d/%m/%Y') as deactivationDate \
                 from subscriber t1 \
