--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -402,13 +402,9 @@ get_subscription_details =  select t1.id, t2.journalCode, t2.journalName,t1.copi
 
 !List Subscriber Type ---------------------------------------------
 
-Search_subtype_all = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type
+search_subtype_all = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type
 
-Search_subtype_prm = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type where subtype = ? and  nationality = ? and institutional = ?
-
-Search_subtype_FP = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type where subtype = ?
-
-Search_subtype_prm = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type where subtype = ? and  nationality = ? and institutional = ?
+search_subtype_prm = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type where
 
 !End List Subscriber Type ---------------------------------------------
 #--------------------------------------------------------------------------
