Reports - subtype - partial implementation - inwards - partial implementation

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -416,8 +416,22 @@ get_subscription_details =  select t1.id, t2.journalCode, t2.journalName,t1.copi
 search_subtype_all = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type
 
 search_subtype_prm = select id, subtypecode, subtypedesc, subtype, nationality, institutional, freejrnl, discount from subscriber_type where
-
 !End List Subscriber Type ---------------------------------------------
+
+!List Inward ---------------------------------------------
+search_inward = select inwardNumber, t4.subscriberNumber as subscriberId, t1.from, DATE_FORMAT(inwardCreationDate,'%d/%m/%Y') as inwardCreationDate, t2.city as city, chqddNumber, t3.purpose as inwardPurpose, \
+                t1.inwardPurpose as inwardPurposeID from inward t1 \
+                left join cities t2 on t1.city = t2.id \
+                left join inward_purpose t3 on t1.inwardPurpose = t3.id \
+                left join subscriber t4 on t1.subscriberId = t4.id \
+                left join currency t5 on t1.currency = t5.id \
+                left join payment_mode t6 on t1.paymentMode = t6.id \
+                left join countries t7 on t1.country = t7.id \
+                left join states t8 on t1.state = t8.id \
+                where inwardNumber is not NULL
+
+!End List Inward ---------------------------------------------
+
 #--------------------------------------------------------------------------
 # End Reports
 #--------------------------------------------------------------------------
