Reports - subtype - partial implementation - inwards - partial implementation -Journals - Partial Implementation -Agents - Partial Implementation

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -432,6 +432,52 @@ search_inward = select inwardNumber, t4.subscriberNumber as subscriberId, t1.fro
 
 !End List Inward ---------------------------------------------
 
+!List Journal ---------------------------------------------
+
+list_journal_all = select id, journalCode, journalName, issnNo, pages, startYear, issues from journals
+
+list_journal_group = select  t1.id, t1.journalCode, t1.journalName, t1.issnNo, t1.pages, t1.startYear, t1.issues from journals t1 \
+                     group t2 journal_group t3 where t1.id = t3.journalid and t2.id = t3.groupid and
+!End List Journals ---------------------------------------------
+
+!List Agents ---------------------------------------------
+
+list_agent_all = select t1.id\
+                    ,t1.agentName \
+                    ,t1.regDate \
+                    ,t1.emailId \
+                    ,t1.address \
+                    ,t2.city \
+                    ,t3.district \
+                    ,t4.state \
+                    ,t5.country \
+                    ,t1.pinCode \
+                    ,t1.discount \
+                    from agents t1 \
+                    left join cities t2 on t1.cityId = t2.id \
+                    left join districts t3 on t1.districtId = t3.id \
+                    left join states t4 on t1.stateId = t4.id \
+                    left join countries t5 on t1.countryId = t5.id
+
+list_agent_prm = select t1.id\
+                    ,t1.agentName \
+                    ,t1.regDate \
+                    ,t1.emailId \
+                    ,t1.address \
+                    ,t2.city \
+                    ,t3.district \
+                    ,t4.state \
+                    ,t5.country \
+                    ,t1.pinCode \
+                    ,t1.discount \
+                    from agents t1 \
+                    left join cities t2 on t1.cityId = t2.id \
+                    left join districts t3 on t1.districtId = t3.id \
+                    left join states t4 on t1.stateId = t4.id \
+                    left join countries t5 on t1.countryId = t5.id \
+                    where t1.id = ?
+!End List Agents ---------------------------------------------
+
 #--------------------------------------------------------------------------
 # End Reports
 #--------------------------------------------------------------------------
