added language drop down to inward.jsp fixed checkbox bug in listSubType.jsp

--- a/src/java/properties/jds_sql.properties
+++ b/src/java/properties/jds_sql.properties
@@ -23,6 +23,8 @@ currency = select currency from currency order by id
 
 return_reason = select return_reason from inward_return_reasons order by id
 
+language = select language from languages order by id
+
 ! End Generic ------------------------------------------------------
 
 
@@ -90,7 +92,7 @@ search_country = select id, country from countries where country like ?
 
 
 ! Journal------------------------------------------------------
-journals = select journalName,journalCode,price from journals
+journals = select journalName,journalCode from journals
 
 journal_insert = insert into journals(journalCode,journalName,issnNo,pages,startYear,issues) values(?,?,?,?,?,?)
 
